--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,327 @@
 ---
+title: "Tony Khánh"
+permalink: /about/
+layout: splash
+excerpt: "Learning today, Leading tomorrow."
+header:
+  overlay_image: /assets/images/about/banner-2.jpg
+  caption: "Science with a spirit of adventure!"
+---
+
+{% include base_path %}
+<!-- <link href="{{ base_path }}/assets/css/static/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+<link href="{{ base_path }}/assets/css/static/style.css" rel="stylesheet">
+<link href="{{ base_path }}/assets/css/static/css" rel="stylesheet" type="text/css">
+<style type="text/css"></style>
+
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-86322230-1', 'auto');
+  ga('send', 'pageview');
+</script>
+
+<script>
+var more_projects_shown = false;
+function start() {
+  $("#showmoreprojects").click(function() {
+    if(!more_projects_shown) {
+      $("#moreprojects").slideDown('fast', function() {
+        $("#showmoreprojects").text('hide');
+      });
+      more_projects_shown = true;
+    } else {
+      $("#moreprojects").slideUp('fast', function() {
+        $("#showmoreprojects").text('show more');
+      });
+      more_projects_shown = false;
+    }
+  });
+
+  var more_pubs_shown = false;
+  $("#showmorepubs").click(function() {
+    if(!more_pubs_shown) {
+      $("#morepubs").slideDown('fast', function() {
+        $("#showmorepubs").text('hide');
+      });
+      more_pubs_shown = true;
+    } else {
+      $("#morepubs").slideUp('fast', function() {
+        $("#showmorepubs").text('show more');
+      });
+      more_pubs_shown = false;
+    }
+  });
+}
+</script>
+
+
+<body onload="start()">
+<div class="container" style="margin-top:50px;">
+  <!-- <div class="container" > -->
+  <div id="headerblob">
+    <a target="_blank" href="http://tonydeep.github.io/"><img src="/assets/images/Khanh_profile.png" class="img-circle imgme" style="border-radius:50%;"></a>
+    <div id="headertext">
+      <div id="htdesc" style="color:#33ffbe;font-weight:400">Natural Language Processing lab</div>
+      <div id="htem"><a href="mailto:tvkhanh@jaist.ac.jp" style="color:#33ffbe;">tvkhanh@jaist.ac.jp</a></div>
+      <div id="icons">
+        <div class="svgico">
+          <a target="_blank" href="https://github.com/tonydeep"><img src="/assets/images/about/github.png" width="50px" class="img-circle" style="border-radius:50%;"></a>
+          <a target="_blank" href="https://www.researchgate.net/profile/Van_Khanh_Tran2"><img src="/assets/images/about/researchgate.png" width="50px" class="img-circle" style="border-radius:50%;"></a>
+          <a target="_blank" href="https://www.linkedin.com/in/tran-van-khanh/"><img src="/assets/images/about/linkedin.svg" width="50px" class="img-circle" style="border-radius:50%;"></a>
+          <a target="_blank" href="http://tonydeep.github.io/blogs"><img src="/assets/images/about/blog.png" width="55px" class="img-circle" style="border-radius:50%;"></a>        
+        </div>
+      </div>
+    </div>
+  </div>
+    <!-- </div> -->
+
+  <!-- Short Bio -->
+  <div class="container" style="font-size:18px; font-weight:350;margin-top:170px;margin-bottom:30px;color:#062a33;">
+    <b>Bio</b>. I was a PhD student in Natural Language Processing at Nguyen lab, JAIST, Japan. My research experience covers natural language generation, deep learning, and Deep Bayesian Nets. I am particularly excited about recurrent neural networks, deep generative models, and the scientific applications of deep learning.
+  </div>
+</div>
+
+<!--  -->
+
+<div class="container" style="margin-top:50px;">
+  
+  <div class="timelineitem">
+      <div class="tdate">November 2017</div>
+      <div class="ttitle"><a href="http://nafosted-nics.org/call-for-papers.html" style="color:#333;">The NAFOSTED Conference on Information and Computer Science (NICS 2017)</a></div>
+      <div class="tdesc"><span class="thigh">November 24-25 in Hanoi, Vietnam</span></div>
+      <div> </div>
+    </div>
+    
+  <div class="timelineitem">
+      <div class="tdate">October 2017</div>
+      <div class="ttitle"><a href="http://kse2017.dhsphue.edu.vn/ConferenceProgram.htm" style="color:#333;">The 9th International Conference on Knowledge and Systems Engineering (KSE 2017)</a></div>
+      <div class="tdesc"><span class="thigh">October 19-21 in Hue, Vietnam</span></div>
+      <div> </div>
+    </div>
+
+  <div class="timelineitem">
+      <div class="tdate">August 2017</div>
+      <div class="ttitle"><a href="http://www.sigdial.org/workshops/conference18/" style="color:#333;">The 18th Annual SIGdial Meeting on Discourse and Dialogue (SIGDIAL 2017)</a></div>
+      <div class="tdesc"><span class="thigh">August 15-17 in Saarbrücken, Germany</span></div>
+      <div> </div>
+    </div>
+  
+  <div class="timelineitem">
+      <div class="tdate">August 2017</div>
+      <div class="ttitle"><a href="http://pacling.ucsy.edu.mm/pacling/" style="color:#333;">The 15th International Conference of the Pacific Association for Computational Linguistics (PACLING 2017)</a></div>
+      <div class="tdesc"><span class="thigh">August 16 - 18, 2017 in Yangon, Myanmar </span></div>
+      <div> </div>
+    </div>
+
+  <div class="timelineitem">
+      <div class="tdate">July 2017</div>
+      <div class="ttitle"><a href="http://acl2017.org/" style="color:#333;">Annual Meeting of the Association for Computational Linguistics (ACL 2017)</a></div>
+      <div class="tdesc"><span class="thigh">July 30-August 4, 2017 in Vancouver, Canada</span></div>
+  </div>
+</div>
+
+<!-- ===================== -->
+<!-- Research -->
+<!-- <hr class="soft" style="margin-top:50px;">
+
+<div class="container">
+  
+  <h2 style="margin: 0; text-align: center; font-weight: 400; font-size: 40px; padding: 10px 0px 40px;">Research</h2>
+  <div id="pubs">
+
+    <div class="pubwrap">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="pubimg">
+            <img src="/assets/images/papers/CoNLL-Models.png">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="pub">
+            <div class="pubt">Natural Language Generation for Spoken Dialogue System using RNN Encoder-Decoder Networks</div>
+            <div class="pubd">Natural language generation (NLG) is a critical component in a spoken dialogue system. This paper presents a Recurrent Neural Network based Encoder-Decoder architecture, in which an LSTM-based decoder called <b>RALSTM</b> is introduced to select, aggregate semantic elements produced by an attention mechanism over the input elements, and to produce the required utterances.</div>
+            <div class="puba">Van-Khanh Tran, Le-Minh Nguyen</div>
+            <div class="pubv">Acceptance rate: <span class="puba">18.7%</span>. Selected for oral presentation: <span class="puba">20/43</span></div>
+            <div class="pubv"></div>
+            <div class="publ">
+              <ul>
+                <li><a href="/files/RALSTM-Slides-CoNLL2017.pptx">Oral</a></li>
+                <li><a href="https://www.researchgate.net/publication/317300175_Natural_Language_Generation_for_Spoken_Dialogue_System_using_RNN_Encoder-Decoder_Networks">PDF</a></li>
+                <li><a href="http://www.conll.org/">CoNLL 2017</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pubwrap">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="pubimg">
+            <img src="/assets/images/papers/SIGDial-Models.png">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="pub">
+            <div class="pubt">Neural-based Natural Language Generation in Dialogue using RNN Encoder-Decoder with Semantic Aggregation</div>
+            <div class="pubd">This paper presents a model called Encoder-Aggregator-Decoder which is an extension of an Recurrent Neural Network based Encoder-Decoder architecture. The proposed Semantic Aggregator consists of two components: an Aligner and a Refiner. The Aligner is a conventional attention calculated over the encoded input information, while the Refiner is another attention or gating mechanism stacked over the attentive Aligner in order to further select and aggregate the semantic elements. </div>
+            <div class="puba">Van-Khanh Tran, Le-Minh Nguyen, Satoshi Tojo</div>
+            <div class="pubv"></div>
+            <div class="publ">
+              <ul>
+                <li><a href="https://www.researchgate.net/publication/317739912_Neural-based_Natural_Language_Generation_in_Dialogue_using_RNN_Encoder-Decoder_with_Semantic_Aggregation">PDF</a></li>
+                <li><a href="http://www.sigdial.org/workshops/conference18/">SGIDial 2017</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="showmore" id="showmorepubs">
+    Show more
+  </div>
+
+  <div id="morepubs">
+    
+    <div class="pubwrap">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="pubimg">
+            <img src="/assets/images/papers/RGRU-Context.png">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="pub">
+            <div class="pubt">Semantic Refinement GRU-based Neural Language Generation for Spoken Dialogue Systems</div>
+            <div class="pubd">This paper presents a new approach to NLG by using recurrent neural networks (RNN), in which a gating mechanism is applied before RNN computation. This results in an architecture called <b>SRGRU</b> and allows the proposed model to generate appropriate sentences. The SRGRU generator can be learned from unaligned data by jointly training sentence planning and surface realization to produce natural language responses.</div>
+            <div class="puba">Van-Khanh Tran and Le-Minh Nguyen</div>
+            <div class="pubv"></div>
+            <div class="publ">
+              <ul>
+                <li><a href="https://www.researchgate.net/publication/317300329_Semantic_Refinement_GRU-based_Neural_Language_Generation_for_Spoken_Dialogue_Systems">PDF</a></li>
+                <li><a href="http://pacling.ucsy.edu.mm/pacling/index.html">PACLING 2017</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="pubwrap">
+      <div class="row">
+        <div class="col-md-6">
+          <div class="pubimg">
+            <img src="/assets/images/papers/RGRU-Context.png">
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="pub">
+            <div class="pubt">Semantic Refinement GRU-based Neural Language Generation for Spoken Dialogue Systems</div>
+            <div class="pubd">This paper presents a new approach to NLG by using recurrent neural networks (RNN), in which a gating mechanism is applied before RNN computation. This results in an architecture called <b>SRGRU</b> and allows the proposed model to generate appropriate sentences. The SRGRU generator can be learned from unaligned data by jointly training sentence planning and surface realization to produce natural language responses.</div>
+            <div class="puba">Van-Khanh Tran and Le-Minh Nguyen</div>
+            <div class="pubv"></div>
+            <div class="publ">
+              <ul>
+                <li><a href="https://www.researchgate.net/publication/317300329_Semantic_Refinement_GRU-based_Neural_Language_Generation_for_Spoken_Dialogue_Systems">PDF</a></li>
+                <li><a href="http://pacling.ucsy.edu.mm/pacling/index.html">PACLING 2017</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+<!-- <hr class="soft" style="margin-top:50px;">
+<div class="container">
+  <h2 style="margin: 0; text-align: center; font-weight: 400; font-size: 40px; padding: 10px 0px 40px;">Clone from others</h2>
+  
+  <div class="row">
+    <div class="col-md-6">
+      <div class="miscitem">
+        <div class="miscimg">
+          <img src="/assets/images/nn.png" class="img-circle" style="border-radius:50%;">
+        </div>
+        <div class="miscd">
+          I wrote a math + code introduction to neural networks and backpropagation. Uses pure numpy and a <a href="https://nbviewer.jupyter.org/github/greydanus/np_nets/blob/master/mnist_nn.ipynb">Jupyter notebook</a>.
+        </div>
+      </div>
+      <div class="miscitem">
+        <div class="miscimg">
+          <img src="/assets/images/eye.png" class="img-circle" style="border-radius:50%;">
+          <div class="colorrect img-circle"></div>
+        </div>
+        <div class="miscd">
+          An article I wrote about <a href="https://issuu.com/dartmouth_science/docs/16w_dujs_print_issue?e=0/34538453">depth perception</a> (page 27) for the Dartmouth Undergraduate Journal of Science
+        </div>
+      </div>
+      <div class="miscitem">
+        <div class="miscimg">
+          <img src="/assets/images/psi.png" class="img-circle" style="border-radius:50%;">
+        </div>
+        <div class="miscd">
+          A <a href="./files/p24_quantum.pdf">class project</a> about numerically modeling quantum systems in MATLAB
+        </div>
+      </div>
+      <div class="miscitem">
+        <div class="miscimg">
+          <img src="/assets/images/matplotlib.png" class="img-circle" style="border-radius:50%;">
+        </div>
+        <div class="miscd">
+          A <a href="https://gist.github.com/greydanus/f6eee59eaf1d90fcb3b534a25362cea4">gist</a> for dynamic plotting with matplotlib. Useful for updating loss functions within a training loop.
+        </div>
+      </div>
+    </div> 
+    <div class="col-md-6">
+      <div class="miscitem">
+        <div class="miscimg">
+          <img src="/assets/images/synthgrad.png" class="img-circle" style="border-radius:50%;">
+          <div class="colorrect img-circle"></div>
+        </div>
+        <div class="miscd">
+          I wrote a <a href="https://nbviewer.jupyter.org/github/greydanus/np_nets/blob/master/synthetic_gradients.ipynb"> numpy model</a> of synthetic gradients for a neural network MNIST classifier. Inspired by this <a href="https://arxiv.org/abs/1608.05343">DeepMind paper</a>.
+        </div>
+      </div>
+      <div class="miscitem">
+        <div class="miscimg">
+          <img src="/assets/images/tensorflow.jpg" class="img-circle" style="border-radius:50%;">
+          <div class="colorrect img-circle"></div>
+        </div>
+        <div class="miscd">
+          An <a href="https://nbviewer.jupyter.org/github/greydanus/dlfun/blob/master/mixture_density/mdn.ipynb">Jupyter notebook</a> about Mixture Density Networks implemented in Google's TensorFlow library
+        </div>
+      </div>
+      <div class="miscitem">
+        <div class="miscimg">
+          <img src="/assets/images/mnist-gan.png" class="img-circle" style="border-radius:50%;">
+        </div>
+        <div class="miscd">
+          I wrote a Generative Adversarial Network <a href="https://github.com/greydanus/mnist-gan">repo</a> for MNIST in PyTorch
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+ -->
+
+</body>
+
+
+
+
+
+<!-- ---
 layout: default
 ---
 
@@ -22,4 +345,7 @@ layout: default
 	</p>
 
 	<p>Fun fact: my name in Chinese character is "荔", which means <a href="https://en.wikipedia.org/wiki/Lychee" target="_blank">lychee</a>, a type of fruit popular in southeastern China.</p>
-</div>
+</div> -->
+
+
+
