--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@ header:
 
 {% include base_path %}
 <!-- <link href="{{ base_path }}/assets/css/static/bootstrap.min.css" rel="stylesheet" media="screen"> -->
-<link href="{{ base_path }}/assets/css/static/style.css" rel="stylesheet">
+<!-- <link href="{{ base_path }}/assets/css/static/style.css" rel="stylesheet">
 <link href="{{ base_path }}/assets/css/static/css" rel="stylesheet" type="text/css">
 <style type="text/css"></style>
-
+ -->
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
