--- a/contact.html
+++ b/contact.html
@@ -1,14 +1,14 @@
 ---
 title: "Tony Khánh"
 permalink: /about/
-layout: splash
+layout: post
 excerpt: "Learning today, Leading tomorrow."
 header:
   overlay_image: /assets/images/about/banner-2.jpg
   caption: "Science with a spirit of adventure!"
 ---
 
-{% include base_path %}
+<!-- {% include base_path %} -->
 <!-- <link href="{{ base_path }}/assets/css/static/bootstrap.min.css" rel="stylesheet" media="screen"> -->
 <!-- <link href="{{ base_path }}/assets/css/static/style.css" rel="stylesheet">
 <link href="{{ base_path }}/assets/css/static/css" rel="stylesheet" type="text/css">
