--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: "Tony Khánh"
 permalink: /about/
-layout: splash
+layout: default
 excerpt: "Learning today, Leading tomorrow."
 header:
   overlay_image: /assets/images/about/banner-2.jpg
