--- a/contact.html
+++ b/contact.html
@@ -8,11 +8,11 @@ header:
   caption: "Science with a spirit of adventure!"
 ---
 
-{% include base_path %}
-<!-- <link href="{{ base_path }}/assets/css/static/bootstrap.min.css" rel="stylesheet" media="screen"> -->
+<!-- {% include base_path %}
 <link href="{{ base_path }}/assets/css/static/style.css" rel="stylesheet">
 <link href="{{ base_path }}/assets/css/static/css" rel="stylesheet" type="text/css">
-<style type="text/css"></style>
+ -->
+ <style type="text/css"></style>
 
 
 <script>
