--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,14 @@
 title: "Tony Khánh"
 permalink: /about/
 layout: default
+<!--
 excerpt: "Learning today, Leading tomorrow."
 header:
   overlay_image: /assets/images/about/banner-2.jpg
-  caption: "Science with a spirit of adventure!"
+  caption: "Science with a spirit of adventure!" -->
 ---
 
-<!-- {% include base_path %}
-<link href="{{ base_path }}/assets/css/static/style.css" rel="stylesheet">
-<link href="{{ base_path }}/assets/css/static/css" rel="stylesheet" type="text/css">
- -->
- <style type="text/css"></style>
-
+<style type="text/css"></style>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
