--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 title: About
 layout: default
-permalink: /about/
+<!-- permalink: /about/ -->
 ---
 
 ![Image of about page](/images/about/banner-4.jpg)
